removed referenced to CaSuMa

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<footer>
 			<div></div>
 			<div class="social">
-				<a href="https://github.com/hyperion-bt/CaSuMa" target="_blank"><img src="./img/github-logo.svg"/></a>
+				<a href="https://github.com/hyperion-bt/cardano-subscription-manager" target="_blank"><img src="./img/github-logo.svg"/></a>
 				<a href="https://twitter.com/helios_lang" target="_blank"><img src="./img/twitter-logo.svg"/></a>
 				<a href="https://discord.gg/XTwPrvB25q" target="_blank"><img src="./img/discord-logo.png"/></a>
 			</div>
